add_library (leplib
             ConfigFile.cpp
             CsvFile.cpp
             JsonArray.cpp
             JsonBool.cpp
             JsonNull.cpp
             JsonNumber.cpp
             JsonObject.cpp
             JsonString.cpp
             JsonValue.cpp
             Logger.cpp
             String.cpp
             TestCase.cpp
             TestModule.cpp
             TestSet.cpp
             Thread.cpp
             )
